# vesal-release-v1.3.0

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  build.sh  check-clang-tidy.sh  readme.md  run_ci.py
.codebase/pipelines/: arm_build.yaml  bookworm_gcc1220_aarch64_buid.yaml  bookworm_gcc1220_x64_buid.yaml  ci.yaml  cronjob.yaml  stretch_gcc630_x64_build.yaml  valgrind_ci.yaml
.github/agents/: newagent.agent.md
benchmark/: CMakeLists.txt  chunkpool_bench.cc  cpu_crc32_bench.cc  cpu_memcpy_bench.cc
docker/: Dockerfile-bookworm-gcc1220-aarch64  Dockerfile-bookworm-gcc1220-x64  Dockerfile-stretch-gcc630-x64
dummy_driver/: CMakeLists.txt  StubGenerator.py
dummy_driver/include/: kae_dummy_driver.h
dummy_driver/src/: kae_dummy_driver.cc  libkaezip_dummy.h  qat_dummy_driver.c
example/: ha_demo.cc  vesal_codec_example.cc
include/vesal/: codec.h  cypher.h  io_vector.h  status.h  vesal.h
include/vesal/c_api/: c_api_vesal.h
open_source/: build-open-source.sh  get-deps.py  open-source.py
perf/codec/: CMakeLists.txt  data_replay.cc  perf_simple.cc  qat_lz4_simple.cc  shared_codec.cc
perf/cypher/: CMakeLists.txt  cy_perf.cc
perf/data_flow/: CMakeLists.txt  data_flow_perf.cc
src/: CMakeLists.txt
src/c_api/: c_api_cypher.cc  c_api_vesal.cc
src/codec/: CMakeLists.txt  codec.cc  codec_common.h  codec_internal.h  dc_format.h
src/codec/kae/: kae_codec.cc  kae_codec.h  kae_codec_channel.cc  kae_codec_channel.h  kae_util.h
src/codec/qat/: qat_codec_dedicated_channel.cc  qat_codec_dedicated_channel.h  qat_codec_engine.cc  qat_codec_engine.h  qat_codec_shared_channel.cc  qat_codec_shared_channel.h  qat_ha.h  qat_handle.cc  qat_handle.h
src/codec/sw/: sw_codec_channel.h
src/common/: CMakeLists.txt  memory_pool_helper.cc  status.cc  vesal.cc
src/common/qat/: qat_buffer.cc  qat_buffer.h  qat_hardware_api_wrapper.h  qat_session.cc  qat_session.h  qat_unit_manager.cc  qat_unit_manager.h  qat_util.cc  qat_util.h
src/cypher/: CMakeLists.txt  qat_cypher_channel.cc  qat_cypher_channel.h  sw_cypher_channel.cc  sw_cypher_channel.h
src/data_flow/: CMakeLists.txt
test/: CMakeLists.txt  c_api_test.cc  codec_test.cc  kae_codec_test.cc  qat_buffer_test.cc  qat_codec_dedicated_channel_test.cc  qat_codec_engine_test.cc  timestamp_test.cc
test_scripts/: README.md  preset.sh  start_qat_monitor.sh  telemetry.sh  telemetry_monitor.py
test_scripts/case/: case2.sh  case4.sh  replay.sh  replay_0630.sh
third/: CMakeLists.txt
tools/: CMakeLists.txt  pci_bind.sh
